--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -5,7 +5,7 @@
   .canvas-label {
     display: flex;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
     padding: 4px 8px;
     border-radius: 4px;
     transition: .1s all ease-in-out;
