--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,4 @@
 app-canvas {
-  display: flex;
-  flex-direction: column;
   kor-page, 
   kor-page * {
     outline-width: 2px;
